# Educational_practice

./: CMakeLists.txt  DecodePage.qml  EncodePage.qml  Main.qml  codingtext.cpp  codingtext.h  decodingtext.cpp  decodingtext.h  imageinfo.cpp  imageinfo.h  main.cpp
core/: CMakeLists.txt  decodertext.cpp  decodertext.h  encodertext.cpp  encodertext.h
gui/: CMakeLists.txt  EncodePage.qml  imageinfo.cpp
